Documentation edits made through Mintlify web editor

--- a/backups.mdx
+++ b/backups.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Backups"
 sidebarTitle: "Backup Guide"
-description: "Please ensure you manage your machines and regularly back up your server data"
+description: "Ensure you manage your machines and regularly backup your server and data"
 ---
 
 ## Protecting Your VPS Data
