Documentation edits made through Mintlify web editor

--- a/backups.mdx
+++ b/backups.mdx
@@ -34,28 +34,28 @@ Regular backups are essential for protecting your data against hardware failures
 
 ---
 
-## Build a Reliable Backup Routine 💾
+## Build a Simple and Reliable Backup Plan 💾
 
-Keeping consistent, verified backups ensures that even if your VPS faces corruption, accidental deletion, or intrusion, you can recover quickly with minimal data loss.
+Having regular backups makes sure you can recover your VPS fast — even after system crashes, mistakes, or attacks.
 
 <Steps>
-  <Step title="1. Choose the right backup type and tool">
-    Decide which backup method best fits your needs:
+  <Step title="1. Pick your backup type">
+    Choose the method that best fits your setup:
 
-    - **Image-level backups (snapshots):** capture an entire disk or VPS state. Ideal for full restores.  
-      Tools: <code>dd</code>, <code>qemu-img</code>, or platform-level snapshots.
+    - **Full snapshots:** save the whole server or disk. Best for complete restores.  
+      Tools: <code>dd</code>, <code>qemu-img</code>, or hosting snapshots.
 
-    - **File-level backups:** back up only selected files or directories. Perfect for web apps, configs, or databases.  
+    - **File backups:** copy only selected files or folders. Great for websites, configs, and databases.  
       Tools: <code>tar</code>, <code>rsync</code>.
 
-    - **Incremental or cloud sync backups:** store data efficiently across cloud providers. Great for redundancy.  
+    - **Cloud or incremental backups:** keep changes synced to remote storage for safety.  
       Tools: <code>rclone</code>, <code>restic</code>, <code>borg</code>.
   </Step>
 
-  <Step title="2. Automate the schedule">
-    Manual backups are easy to forget — automate them using cron or systemd timers.
+  <Step title="2. Automate your backups">
+    Backups you run manually are easy to forget — automate them with cron or systemd timers.
 
-    **Example (daily at 2:30 AM):**
+    **Example (runs every day at 2:30 AM):**
     ```bash
     crontab -e
     ```
@@ -64,38 +64,37 @@ Keeping consistent, verified backups ensures that even if your VPS faces corrupt
     30 2 * * * /usr/local/bin/backup.sh >> /var/log/backup.log 2>&1
     ```
 
-    You can also automate remote syncs to cloud storage or a second VPS:
+    You can also sync your files automatically to cloud storage or another VPS:
     ```bash
     rclone sync /var/www remote:backups/server1 --exclude "cache/**"
     ```
   </Step>
 
-  <Step title="3. Verify integrity and rotate backups">
-    A backup is only useful if it restores correctly.
+  <Step title="3. Check and clean your backups">
+    A backup only helps if it actually works.
 
-    - **Verify checksums:** compare SHA256 or MD5 hashes of backup files regularly.
-    - **Test restores:** mount or extract backups in a temporary directory to confirm data integrity.
-    - **Rotate old backups:** remove archives older than 30 days to save space.  
-      Example:
+    - **Check file hashes:** use SHA256 or MD5 to verify backups are valid.  
+    - **Test restores:** try extracting or mounting backups in a test folder.  
+    - **Clean up old files:** delete backups older than 30 days.  
       ```bash
       find /backups -type f -mtime +30 -delete
       ```
   </Step>
 
-  <Step title="4. Store copies offsite">
-    Never rely on a single server for all backups.
+  <Step title="4. Keep a copy somewhere safe">
+    Don’t store all backups on one machine.
 
-    - Keep one local copy for quick restores.  
-    - Sync another to an external or cloud location (S3, Backblaze, Google Drive, etc.).  
-    - Encrypt sensitive data before transfer using <code>gpg</code> or <code>restic --password-command</code>.
+    - Keep one local copy for quick recovery.  
+    - Upload another to external or cloud storage (S3, Backblaze, Google Drive, etc.).  
+    - Encrypt files before upload using <code>gpg</code> or <code>restic --password-command</code>.
 
-    💡 *Tip:* Apply the **3-2-1 rule** — 3 copies, 2 storage types, 1 offsite.
+    💡 *Tip:* Follow the **3-2-1 rule** — 3 copies, 2 different places, 1 offsite.
   </Step>
 </Steps>
 
 ---
 
-✅ With a reliable, automated backup routine, you can restore your VPS or applications confidently — even after hardware failure, misconfiguration, or a security breach.
+✅ A simple, automated backup plan keeps your server safe and restorable — no matter what goes wrong.
 
 ---
 
