Documentation edits made through Mintlify web editor

--- a/backups.mdx
+++ b/backups.mdx
@@ -42,80 +42,53 @@ Having regular backups makes sure you can recover your VPS fast — even after s
   <Step title="1. Pick your backup type">
     Choose the method that best fits your setup:
 
-    - **Full snapshots:** save the whole server or disk. Best for complete restores.\
-      Tools: <code>
-      dd</code>
+    - **Full snapshots:** save the whole server or disk. Best for complete restores.  
+      Tools: <code>dd</code>, <code>qemu-img</code>, or hosting snapshots.
 
-      , <code>
-      qemu-img</code>
+    - **File backups:** copy only selected files or folders. Great for websites, configs, and databases.  
+      Tools: <code>tar</code>, <code>rsync</code>.
 
-      , or hosting snapshots.
-    - **File backups:** copy only selected files or folders. Great for websites, configs, and databases.\
-      Tools: <code>
-      tar</code>
-
-      , <code>
-      rsync</code>
-
-      .
-    - **Cloud or incremental backups:** keep changes synced to remote storage for safety.\
-      Tools: <code>
-      rclone</code>
-
-      , <code>
-      restic</code>
-
-      , <code>
-      borg</code>
-
-      .
+    - **Cloud or incremental backups:** keep changes synced to remote storage for safety.  
+      Tools: <code>rclone</code>, <code>restic</code>, <code>borg</code>.
   </Step>
+
   <Step title="2. Automate your backups">
     Backups you run manually are easy to forget — automate them with cron or systemd timers.
 
     **Example (runs every day at 2:30 AM):**
-
     ```bash
     crontab -e
     ```
-
     Then add:
-
     ```bash
     30 2 * * * /usr/local/bin/backup.sh >> /var/log/backup.log 2>&1
     ```
 
     You can also sync your files automatically to cloud storage or another VPS:
-
     ```bash
     rclone sync /var/www remote:backups/server1 --exclude "cache/**"
     ```
   </Step>
+
   <Step title="3. Check and clean your backups">
     A backup only helps if it actually works.
 
-    - **Check file hashes:** use SHA256 or MD5 to verify backups are valid.
-    - **Test restores:** try extracting or mounting backups in a test folder.
-    - **Clean up old files:** delete backups older than 30 days.
-
+    - **Check file hashes:** use SHA256 or MD5 to verify backups are valid.  
+    - **Test restores:** try extracting or mounting backups in a test folder.  
+    - **Clean up old files:** delete backups older than 30 days.  
       ```bash
       find /backups -type f -mtime +30 -delete
       ```
   </Step>
+
   <Step title="4. Keep a copy somewhere safe">
     Don’t store all backups on one machine.
 
-    - Keep one local copy for quick recovery.
-    - Upload another to external or cloud storage (S3, Backblaze, Google Drive, etc.).
-    - Encrypt files before upload using <code>
-      gpg</code>
+    - Keep one local copy for quick recovery.  
+    - Upload another to external or cloud storage (S3, Backblaze, Google Drive, etc.).  
+    - Encrypt files before upload using <code>gpg</code> or <code>restic --password-command</code>.
 
-       or <code>
-      restic --password-command</code>
-
-      .
-
-    💡 _Tip:_ Follow the **3-2-1 rule** — 3 copies, 2 different places, 1 offsite.
+    💡 *Tip:* Follow the **3-2-1 rule** — 3 copies, 2 different places, 1 offsite.
   </Step>
 </Steps>
 
