Documentation edits made through Mintlify web editor

--- a/vps-management/vps-management-portal.mdx
+++ b/vps-management/vps-management-portal.mdx
@@ -1,7 +1,7 @@
 ---
-title: "VPS Control Panel | EDBB Portal"
-sidebarTitle: "VPS Control Panel"
-description: "Tour the refreshed EDBB portal: manage power, reinstalls, traffic pools, upgrades, and network settings in one place."
+title: "VPS Control Panel"
+sidebarTitle: "Control Panel"
+description: "Meet our all-new VPS control panel: Intuitive Dashboard, Reinstall, Power Management, Driver Settings, Traffic Pool, Resource- and Plan-Upgrades"
 ---
 
 # Meet the EDBB VPS Portal
