--- a/vps-management/vps-management-portal.mdx
+++ b/vps-management/vps-management-portal.mdx
@@ -4,13 +4,15 @@ sidebarTitle: "Control Panel"
 description: "Meet our all-new VPS control panel: Intuitive Dashboard, Reinstall, Power Management, Driver Settings, Traffic Pool, Resource- and Plan-Upgrades"
 ---
 
-# Meet the EDBB VPS Portal
+# Meet our VPS Control Panel
 
 <Info>
   Bookmark the <a href="https://my.edbb.com/clientarea.php" target="_blank">EDBB VPS Portal</a>. After signing in, open the top-right <strong>Account</strong> menu, choose <strong>Security Settings</strong>, and switch on multi-factor authentication to lock down access.
 </Info>
 
 The redesigned service view splits daily tasks into tabs across the top—**Dashboard, Installation, Traffic, Settings, rDNS, Network, Upgrades**—while a quick-action column on the left keeps power and console controls one click away.
+
+![EDBB VPS Portal Dashboard](/assets/edbb-management-portal.png)
 
 ---
 
@@ -70,4 +72,3 @@ The redesigned service view splits daily tasks into tabs across the top—**Dash
 - **Network** – copy your IPv4/IPv6 assignments and gateways at a glance.  
 - **⭐ Upgrades** – order add-on IPv4 addresses, RAM/CPU boosts, or full plan upgrades directly—no need to message Support.
 
-![EDBB VPS Portal Dashboard](/assets/edbb-management-portal.png)
