Documentation edits made through Mintlify web editor

--- a/vps-management/vps-management-portal.mdx
+++ b/vps-management/vps-management-portal.mdx
@@ -10,7 +10,9 @@ description: "Meet our all-new VPS control panel: Intuitive Dashboard, Reinstall
   Bookmark the <a href="https://my.edbb.com/clientarea.php" target="_blank">EDBB VPS Portal</a>. After signing in, open the top-right <strong>Account</strong> menu, choose <strong>Security Settings</strong>, and switch on multi-factor authentication to lock down access.
 </Info>
 
-The redesigned service view splits daily tasks into tabs across the top—**Dashboard, Installation, Traffic, Settings, rDNS, Network, Upgrades**—while a quick-action column on the left keeps power and console controls one click away.
+Our redesigned control panel splits daily tasks into tabs:
+—**Dashboard, Installation, Traffic, Settings, rDNS, Network, Upgrades**—
+while a quick-action column on the left keeps power and console controls one click away.
 
 ![EDBB VPS Portal Dashboard](/assets/edbb-management-portal.png)
 
