Documentation edits made through Mintlify web editor

--- a/vps-management/vps-management-portal.mdx
+++ b/vps-management/vps-management-portal.mdx
@@ -4,11 +4,8 @@ sidebarTitle: "Control Panel"
 description: "Meet our all-new VPS control panel: Intuitive Dashboard, Reinstall, Power Management, Driver Settings, Traffic Pool, Resource- and Plan-Upgrades"
 ---
 
-# Meet our VPS Control Panel
+# Meet your VPS Control Panel
 
-<Info>
-  Bookmark the <a href="https://my.edbb.com/clientarea.php" target="_blank">EDBB VPS Portal</a>. After signing in, open the top-right <strong>Account</strong> menu, choose <strong>Security Settings</strong>, and switch on multi-factor authentication to lock down access.
-</Info>
 
 Our redesigned control panel splits daily tasks into tabs:
 —**Dashboard, Installation, Traffic, Settings, rDNS, Network, Upgrades**—
@@ -74,3 +71,6 @@ while a quick-action column on the left keeps power and console controls one cli
 - **Network** – copy your IPv4/IPv6 assignments and gateways at a glance.  
 - **⭐ Upgrades** – order add-on IPv4 addresses, RAM/CPU boosts, or full plan upgrades directly—no need to message Support.
 
+<Info>
+  Bookmark the <a href="https://my.edbb.com/clientarea.php" target="_blank">EDBB VPS Portal</a>. After signing in, open the top-right <strong>Account</strong> menu, choose <strong>Security Settings</strong>, and switch on multi-factor authentication to lock down access.
+</Info>
