Documentation edits made through Mintlify web editor

--- a/vps-management/vps-management-portal.mdx
+++ b/vps-management/vps-management-portal.mdx
@@ -1,15 +1,15 @@
 ---
-title: "VPS Control Panel"
+title: "EDBB VPS Control Panel"
 sidebarTitle: "Control Panel"
-description: "Meet our all-new VPS control panel: Intuitive Dashboard, Reinstall, Power Management, Driver Settings, Traffic Pool, Resource- and Plan-Upgrades"
+description: "Meet your all-new VPS control panel: Intuitive Dashboard, Reinstall, Power Management, Driver Settings, Traffic Pool, Resource- and Plan-Upgrades"
 ---
 
 # Meet your VPS Control Panel
 
 
 Our redesigned control panel splits daily tasks into tabs:
-—**Dashboard, Installation, Traffic, Settings, rDNS, Network, Upgrades**—
-while a quick-action column on the left keeps power and console controls one click away.
+**Dashboard, Installation, Traffic, Settings, rDNS, Network, Upgrades**
+while a quick-action column on the left keeps power and console controls only one click away.
 
 ![EDBB VPS Portal Dashboard](/assets/edbb-management-portal.png)
 
