Documentation edits made through Mintlify web editor

--- a/vps-management/vps-management-portal.mdx
+++ b/vps-management/vps-management-portal.mdx
@@ -11,7 +11,10 @@ Our redesigned control panel splits daily tasks into tabs:
 **Dashboard, Installation, Traffic, Settings, rDNS, Network, Upgrades**
 while a quick-action column on the left keeps power and console controls only one click away.
 
-![EDBB VPS Portal Dashboard](/assets/edbb-management-portal.png)
+<Frame>
+  <img src="/assets/edbb-management-portal.png" alt="EDBB VPS Control Panel" />
+</Frame>
+
 
 ---
 
