Documentation edits made through Mintlify web editor

--- a/vps-management/vps-management-portal.mdx
+++ b/vps-management/vps-management-portal.mdx
@@ -50,7 +50,7 @@ while a quick-action column on the left keeps power and console controls only on
     Monitor consumed vs. allocated traffic. The dial shows percentage used, remaining traffic, real values in GB, and the next refill date so you can plan ahead. An info banner warns when traffic is low or fully used.
   </Card>
   <Card title="🌊 Traffic Pool Ledger">
-    See global pool balance, hydration history, and trigger manual hydration,  <strong>TopUp</strong> traffic pool. An info banner warns when auto hydration isn't configured.
+    See global pool log and balance sheet, hydration history, trigger manual hydration,  <strong>TopUp</strong> traffic pool links. An info banner warns when auto hydration isn't configured or traffic pool is empty/unused.
   </Card>
 </CardGroup>
 
