Documentation edits made through Mintlify web editor

--- a/vps-management/autoinstall-reinstall-install-vps-linux-windows.mdx
+++ b/vps-management/autoinstall-reinstall-install-vps-linux-windows.mdx
@@ -21,7 +21,10 @@ import { CtaButton } from "/snippets/cta-button.mdx";
   <Step title="Switch to Installation → AutoInstall OS">
     Use the <strong>Installation</strong> tab on the service dashboard, then stay on the default <strong>AutoInstall OS</strong> view.
     <div style={{marginTop: "16px"}}>
-      <img src="/assets/vps-reinstall-os.png" alt="Installation tab in the EDBB portal" style={{width: "100%", maxWidth: "820px", borderRadius: "16px", border: "1px solid rgba(0,0,0,0.08)"}} />
+      <Frame>
+  <img src="/assets/vps-reinstall-os.png" alt="Install OS in Control Pnael" />
+</Frame>
+
     </div>
   </Step>
   <Step title="Pick the operating system">
