Documentation edits made through Mintlify web editor

--- a/vps-management/autoinstall-reinstall-install-vps-linux-windows.mdx
+++ b/vps-management/autoinstall-reinstall-install-vps-linux-windows.mdx
@@ -21,9 +21,10 @@ import { CtaButton } from "/snippets/cta-button.mdx";
   <Step title="Switch to Installation → AutoInstall OS">
     Use the <strong>Installation</strong> tab on the service dashboard, then stay on the default <strong>AutoInstall OS</strong> view.
     <div style={{marginTop: "16px"}}>
+  
       <Frame>
-  <img src="/assets/vps-reinstall-os.png" alt="Install OS in Control Pnael" />
-</Frame>
+  <img src="/assets/vps-reinstall-os.png" alt="Install OS in Control Panel" />
+     </Frame>
 
     </div>
   </Step>
