Documentation edits made through Mintlify web editor

--- a/vps-management/autoinstall-reinstall-install-vps-linux-windows.mdx
+++ b/vps-management/autoinstall-reinstall-install-vps-linux-windows.mdx
@@ -1,16 +1,17 @@
 ---
 title: "Reinstall Your VPS (Linux or Windows)"
 sidebarTitle: "Reinstall VPS"
-description: "Use the Installation tab in the EDBB portal to deploy a fresh Linux or Windows template with new credentials."
+description: "Use the Installation tab in the EDBB Control Panel to reinstall your VPS with a fresh Linux or Windows OS and user-defined password"
 ---
 
 import { CtaButton } from "/snippets/cta-button.mdx";
 
-# Reinstall from the Installation Tab
+## Reinstall from the Installation Tab
 
-<Info>
-  Reinstalling wipes the entire VPS disk and replaces the operating system. Double-check that off-site backups or snapshots exist before you continue.
-</Info>
+<Warning>
+Important: Reinstalling your VPS will permanently erase all data.
+Make sure you have backups before proceeding.
+</Warning>
 
 ## Run AutoInstall in Five Steps
 
