--- a/vps-management/vps-control-panel.mdx
+++ b/vps-management/vps-control-panel.mdx
@@ -4,7 +4,7 @@ sidebarTitle: "Control Panel"
 description: "Meet your all-new VPS control panel: Intuitive Dashboard, Reinstall, Power Management, Driver Settings, Traffic Pool, Resource- and Plan-Upgrades"
 ---
 
-# Meet your VPS Control Panel
+## Meet your VPS Control Panel
 
 
 Our redesigned control panel splits daily tasks into tabs:
