Documentation edits made through Mintlify web editor

--- a/vps-management/autoinstall-reinstall-install-vps-linux-windows.mdx
+++ b/vps-management/autoinstall-reinstall-install-vps-linux-windows.mdx
@@ -13,14 +13,14 @@ Important: Reinstalling your VPS will permanently erase all data.
 Make sure you have backups before proceeding.
 </Warning>
 
-## Run AutoInstall in Five Steps
+## Run AutoInstall in Five Easy Steps
 
 <Steps>
-  <Step title="Open your VPS in the portal">
-    Sign in to the <a href="https://my.edbb.com/clientarea.php" target="_blank">EDBB VPS Portal</a>, go to <strong>Services</strong>, and choose the VPS you want to rebuild.
+  <Step title="Locate your VPS in the control panel">
+    Sign in to the <a href="https://my.edbb.com/clientarea.php" target="_blank">EDBB Control Panel</a>, go to <strong>Services</strong>, and choose the VPS you need to reinstall.
   </Step>
-  <Step title="Switch to Installation → AutoInstall OS">
-    Use the <strong>Installation</strong> tab on the service dashboard, then stay on the default <strong>AutoInstall OS</strong> view.
+  <Step title="Switch to Installation tab → Select Automated Installers">
+    Use the <strong>Installation</strong> tab on the service dashboard, then stay on the default <strong>Automated Installers</strong> view.
     <div style={{marginTop: "16px"}}>
   
       <Frame>
