Documentation edits made through Mintlify web editor

--- a/vps-management/autoinstall-reinstall-install-vps-linux-windows.mdx
+++ b/vps-management/autoinstall-reinstall-install-vps-linux-windows.mdx
@@ -36,7 +36,7 @@ Make sure you have backups before proceeding.
     </div>
   </Step>
   <Step title="Choose the version & confirm options">
-    Use the dropdown beneath the tile to pick the release you want. If the OS offers additional options (desktop vs. minimal, language packs, etc.) review them before you proceed.
+    Use the dropdown underneath the tile to pick the version/release you want. If the OS offers additional options (desktop vs. minimal, language packs, etc.) review them before you proceed.
   </Step>
   <Step title="Set credentials and launch">
     Enter the new password (or paste an SSH public key) and click <strong>Start installation</strong>. The portal queues the reinstall and shows the progress log in real time.
