Documentation edits made through Mintlify web editor

--- a/vps-management/autoinstall-reinstall-install-vps-linux-windows.mdx
+++ b/vps-management/autoinstall-reinstall-install-vps-linux-windows.mdx
@@ -30,21 +30,21 @@ Make sure you have backups before proceeding.
     </div>
   </Step>
   <Step title="Pick the operating system">
-    Click the tile for the OS family you need (Ubuntu, Debian, Rocky, AlmaLinux, Windows Server, etc.).
+    Click the tile of the OS family you would like to install (Ubuntu, Debian, Rocky, AlmaLinux, Windows Server, etc.).
     <div style={{marginTop: "16px"}}>
       <img src="/assets/vps-reinstall-os-sel.png" alt="Selecting an AutoInstall template" style={{width: "100%", maxWidth: "820px", borderRadius: "16px", border: "1px solid rgba(0,0,0,0.08)"}} />
     </div>
   </Step>
-  <Step title="Choose the version & confirm options">
-    Use the dropdown underneath the tile to pick the version/release you want. If the OS offers additional options (desktop vs. minimal, language packs, etc.) review them before you proceed.
+  <Step title="Choose the OS version & confirm options">
+    Use the dropdown below the OS family tile to pick the version/release you would like to install. If the OS offers additional options (desktop vs. minimal, language packs, etc.) review them before you proceed.
   </Step>
-  <Step title="Set credentials and launch">
-    Enter the new password (or paste an SSH public key) and click <strong>Start installation</strong>. The portal queues the reinstall and shows the progress log in real time.
+  <Step title="Set password and launch">
+    Enter a password (or paste an SSH public key) and click <strong>Start the installation</strong>. Our dashboard launches the installation and shows a progress-bar.
   </Step>
 </Steps>
 
 <Callout type="warning">
-  No confirmation email is sent after a reinstall. Store the new credentials immediately—the password replaces the previous root/Administrator login as soon as the job completes.
+  No confirmation email is sent after a reinstall. Store the new credentials immediately — the new password replaces the previous root/Administrator login as soon as the installation completes.
 </Callout>
 
 ---
