--- a/vps-management/autoinstall-reinstall-install-vps-linux-windows.mdx
+++ b/vps-management/autoinstall-reinstall-install-vps-linux-windows.mdx
@@ -30,7 +30,7 @@ Make sure you have backups before proceeding.
     </div>
   </Step>
   <Step title="Pick the operating system">
-    Click the tile of the OS family you would like to install (Ubuntu, Debian, Rocky, AlmaLinux, Windows Server, etc.).
+    Click the tile of the OS family you would like to install (Ubuntu, Debian, Rocky, AlmaLinux, Windows Server, etc.). Windows 10 you find in the Windows Server section.
     <div style={{marginTop: "16px"}}>
       <img src="/assets/vps-reinstall-os-sel.png" alt="Selecting an AutoInstall template" style={{width: "100%", maxWidth: "820px", borderRadius: "16px", border: "1px solid rgba(0,0,0,0.08)"}} />
     </div>
