Documentation edits made through Mintlify web editor

--- a/vps-management/autoinstall-reinstall-install-vps-linux-windows.mdx
+++ b/vps-management/autoinstall-reinstall-install-vps-linux-windows.mdx
@@ -44,7 +44,7 @@ Make sure you have backups before proceeding.
 </Steps>
 
 <Callout type="warning">
-  No confirmation email is sent after a reinstall. Store the new credentials immediately — the new password replaces the previous root/Administrator login as soon as the installation completes.
+  We do not send a new Welcome Email when you reinstall! The password you specify during installation will be your new root (Linux) or Windows Administrator password. 
 </Callout>
 
 ---
