--- a/vps-management/autoinstall-reinstall-install-vps-linux-windows.mdx
+++ b/vps-management/autoinstall-reinstall-install-vps-linux-windows.mdx
@@ -51,76 +51,62 @@ Make sure you have backups before proceeding.
 
 ## Track Progress & Reconnect
 
-<div className="progress-cards">
+<div className="pcards">
   <div className="pcard">
     <div className="pbadge">≈5m</div>
     <div>
-      <strong className="ptitle">Linux timeline</strong>
-      <p className="ptext">
-        Most Linux templates complete within about five minutes. Let AutoInstall
-        handle the reboot—no extra clicks needed.
-      </p>
+      <div className="ptitle">Linux timeline</div>
+      <div className="ptext">
+        Most Linux templates complete in about five minutes. AutoInstall handles the reboot—no extra clicks.
+      </div>
     </div>
   </div>
 
   <div className="pcard">
     <div className="pbadge">≈15m</div>
     <div>
-      <strong className="ptitle">Windows timeline</strong>
-      <p className="ptext">
-        Windows Server usually needs around fifteen minutes. Once the status shows
-        <em> Running</em>, reconnect via SSH/RDP with the new credentials.
-      </p>
+      <div className="ptitle">Windows timeline</div>
+      <div className="ptext">
+        Windows Server usually needs ~15 minutes. When the status shows <em>Running</em>, reconnect via SSH/RDP with the new credentials.
+      </div>
     </div>
   </div>
 </div>
 
 <Callout type="info">
-  The <strong>Installation</strong> tab streams log entries while the image is provisioned.
-  SSH/RDP ports remain closed until the job finishes. ⚠️ Do not power off or reboot the VPS
-  manually—AutoInstall restarts it automatically once the OS is ready.
+  The <strong>Installation</strong> tab streams logs while the image is provisioned. SSH/RDP ports remain closed until the job finishes.  
+  ⚠️ Do not power off or reboot the VPS manually—AutoInstall restarts it automatically when the OS is ready.
 </Callout>
 
 <style>
-  {`
-  .progress-cards {
-    display: grid;
-    gap: 16px;
-    grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
+{`
+.pcards{
+  display:grid; gap:16px;
+  grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
+}
+.pcard{
+  display:flex; gap:16px; align-items:center;
+  padding:18px; border-radius:16px;
+  background: var(--mint-color-surface, #fff);
+  border:1px solid var(--mint-color-border, #e7e9ee);
+}
+.pbadge{
+  width:64px; height:64px; border-radius:999px;
+  display:flex; align-items:center; justify-content:center;
+  border:3px solid var(--mint-color-primary, #3857e8);
+  background: color-mix(in srgb, var(--mint-color-primary, #3857e8) 10%, transparent);
+  font-weight:700;
+}
+.ptitle{ font-weight:600; margin-bottom:4px; }
+.ptext{ color: var(--mint-color-text-secondary, inherit); }
+/* Dark mode refinement */
+@media (prefers-color-scheme: dark){
+  .pcard{
+    background: var(--mint-color-surface-muted, #0f1222);
+    border-color: color-mix(in srgb, #fff 12%, transparent);
   }
-
-  .pcard {
-    background: var(--mint-color-surface, #ffffff);
-    border: 1px solid var(--mint-color-border, #e6e8eb);
-    border-radius: 18px;
-    padding: 20px;
-    display: flex;
-    align-items: center;
-    gap: 18px;
-  }
-
-  .pbadge {
-    width: 72px;
-    aspect-ratio: 1 / 1;
-    border-radius: 999px;
-    border: 3px solid var(--mint-color-primary, #3857e8);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font: 700 18px/1 system-ui, -apple-system, Segoe UI, Roboto, sans-serif;
-  }
-
-  .ptitle { display:block; margin: 0 0 6px 0; }
-  .ptext  { margin: 0; }
-
-  /* Dark mode tweaks */
-  @media (prefers-color-scheme: dark) {
-    .pcard {
-      background: var(--mint-color-surface-muted, #101322);
-      border-color: color-mix(in srgb, #fff 12%, transparent);
-    }
-  }
-  `}
+}
+`}
 </style>
 
 ---
